concordium-std/tests/derive-deserial-with-state/fail-tag-gt-repr.stderr
error: 'tag' attribute value of 256 cannot be represented by the type u8 set in 'repr(u8)'
 --> tests/derive-deserial-with-state/fail-tag-gt-repr.rs:9:18
  |
9 |     #[concordium(tag = 256)]
  |                  ^^^
